@@ -1,6 +1,8 @@
+* Bug fix on builder.
+
 0.4.2
 
-Bug fix on executable
+* Bug fix on executable
 
 0.4.1
 
